// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Scripts > RDBMS - mariadb 1`] = `
[
  {
    "formatter": "sql",
    "label": "Drop Database",
    "query": "DROP DATABASE database1",
  },
  {
    "formatter": "sql",
    "label": "Create Database",
    "query": "CREATE DATABASE database1",
  },
  {
    "formatter": "sql",
    "label": "Select All Columns",
    "query": "SELECT
  *
FROM
  table1
LIMIT
  200",
  },
  {
    "formatter": "sql",
    "label": "Select Count",
    "query": "SELECT
  COUNT(*)
FROM
  table1
WHERE
  id = ''
  AND column1 = ''
  AND column2 = ''",
  },
  {
    "formatter": "sql",
    "label": "Select Specific Columns",
    "query": "SELECT
  id,
  column1,
  column2
FROM
  table1
WHERE
  id = ''
  AND column1 = ''
  AND column2 = ''
LIMIT
  200",
  },
  {
    "formatter": "sql",
    "label": "Select Distinct",
    "query": "SELECT
  DISTINCT column1
FROM
  table1
WHERE
  id = ''
  AND column1 = ''
  AND column2 = ''
LIMIT
  200",
  },
  {
    "formatter": "sql",
    "label": "Insert",
    "query": "INSERT INTO
  table1 (id, column1, column2)
VALUES
  ('_id_', '_column1_', '_column2_')",
  },
  {
    "formatter": "sql",
    "label": "Update",
    "query": "UPDATE
  table1
SET
  id = '',
  column1 = '',
  column2 = ''
WHERE
  id = ''
  AND column1 = ''
  AND column2 = ''",
  },
  {
    "formatter": "sql",
    "label": "Delete",
    "query": "DELETE FROM
  table1
WHERE
  id = ''
  AND column1 = ''
  AND column2 = ''",
  },
  {
    "formatter": "sql",
    "label": "Create Table",
    "query": "CREATE TABLE table1 (
  id INT PRIMARY KEY NOT NULL,
  column1 INT NOT NULL,
  column2 VARCHAR(100) NOT NULL
)",
  },
  {
    "formatter": "sql",
    "label": "Drop Table",
    "query": "DROP TABLE table1",
  },
  {
    "formatter": "sql",
    "label": "Add Column",
    "query": "ALTER TABLE
  table1
ADD
  COLUMN newColumn1 varchar(200)",
  },
  {
    "formatter": "sql",
    "label": "Drop Column",
    "query": "ALTER TABLE
  table1 DROP COLUMN id;
ALTER TABLE
  table1 DROP COLUMN column1;
ALTER TABLE
  table1 DROP COLUMN column2;",
  },
]
`;

exports[`Scripts > RDBMS - mssql 1`] = `
[
  {
    "formatter": "sql",
    "label": "Drop Database",
    "query": "DROP DATABASE database1",
  },
  {
    "formatter": "sql",
    "label": "Create Database",
    "query": "CREATE DATABASE database1",
  },
  {
    "formatter": "sql",
    "label": "Select All Columns",
    "query": "SELECT
  TOP 200 *
FROM
  table1",
  },
  {
    "formatter": "sql",
    "label": "Select Count",
    "query": "SELECT
  COUNT(*)
FROM
  table1
WHERE
  id = ''
  AND column1 = ''
  AND column2 = ''",
  },
  {
    "formatter": "sql",
    "label": "Select Specific Columns",
    "query": "SELECT
  TOP 200 id,
  column1,
  column2
FROM
  table1
WHERE
  id = ''
  AND column1 = ''
  AND column2 = ''",
  },
  {
    "formatter": "sql",
    "label": "Select Distinct",
    "query": "SELECT
  DISTINCT TOP 200 column1
FROM
  table1
WHERE
  id = ''
  AND column1 = ''
  AND column2 = ''",
  },
  {
    "formatter": "sql",
    "label": "Insert",
    "query": "INSERT INTO
  table1 (id, column1, column2)
VALUES
  ('_id_', '_column1_', '_column2_')",
  },
  {
    "formatter": "sql",
    "label": "Update",
    "query": "UPDATE
  table1
SET
  id = '',
  column1 = '',
  column2 = ''
WHERE
  id = ''
  AND column1 = ''
  AND column2 = ''",
  },
  {
    "formatter": "sql",
    "label": "Delete",
    "query": "DELETE FROM
  table1
WHERE
  id = ''
  AND column1 = ''
  AND column2 = ''",
  },
  {
    "formatter": "sql",
    "label": "Create Table",
    "query": "CREATE TABLE table1 (
  id INT PRIMARY KEY NOT NULL,
  column1 INT NOT NULL,
  column2 VARCHAR(100) NOT NULL
)",
  },
  {
    "formatter": "sql",
    "label": "Drop Table",
    "query": "DROP TABLE table1",
  },
  {
    "formatter": "sql",
    "label": "Add Column",
    "query": "ALTER TABLE
  table1
ADD
  COLUMN newColumn1 NVARCHAR(200)",
  },
  {
    "formatter": "sql",
    "label": "Drop Column",
    "query": "ALTER TABLE
  table1 DROP COLUMN id;
ALTER TABLE
  table1 DROP COLUMN column1;
ALTER TABLE
  table1 DROP COLUMN column2;",
  },
]
`;

exports[`Scripts > RDBMS - mysql 1`] = `
[
  {
    "formatter": "sql",
    "label": "Drop Database",
    "query": "DROP DATABASE database1",
  },
  {
    "formatter": "sql",
    "label": "Create Database",
    "query": "CREATE DATABASE database1",
  },
  {
    "formatter": "sql",
    "label": "Select All Columns",
    "query": "SELECT
  *
FROM
  table1
LIMIT
  200",
  },
  {
    "formatter": "sql",
    "label": "Select Count",
    "query": "SELECT
  COUNT(*)
FROM
  table1
WHERE
  id = ''
  AND column1 = ''
  AND column2 = ''",
  },
  {
    "formatter": "sql",
    "label": "Select Specific Columns",
    "query": "SELECT
  id,
  column1,
  column2
FROM
  table1
WHERE
  id = ''
  AND column1 = ''
  AND column2 = ''
LIMIT
  200",
  },
  {
    "formatter": "sql",
    "label": "Select Distinct",
    "query": "SELECT
  DISTINCT column1
FROM
  table1
WHERE
  id = ''
  AND column1 = ''
  AND column2 = ''
LIMIT
  200",
  },
  {
    "formatter": "sql",
    "label": "Insert",
    "query": "INSERT INTO
  table1 (id, column1, column2)
VALUES
  ('_id_', '_column1_', '_column2_')",
  },
  {
    "formatter": "sql",
    "label": "Update",
    "query": "UPDATE
  table1
SET
  id = '',
  column1 = '',
  column2 = ''
WHERE
  id = ''
  AND column1 = ''
  AND column2 = ''",
  },
  {
    "formatter": "sql",
    "label": "Delete",
    "query": "DELETE FROM
  table1
WHERE
  id = ''
  AND column1 = ''
  AND column2 = ''",
  },
  {
    "formatter": "sql",
    "label": "Create Table",
    "query": "CREATE TABLE table1 (
  id INT PRIMARY KEY NOT NULL,
  column1 INT NOT NULL,
  column2 VARCHAR(100) NOT NULL
)",
  },
  {
    "formatter": "sql",
    "label": "Drop Table",
    "query": "DROP TABLE table1",
  },
  {
    "formatter": "sql",
    "label": "Add Column",
    "query": "ALTER TABLE
  table1
ADD
  COLUMN newColumn1 varchar(200)",
  },
  {
    "formatter": "sql",
    "label": "Drop Column",
    "query": "ALTER TABLE
  table1 DROP COLUMN id;
ALTER TABLE
  table1 DROP COLUMN column1;
ALTER TABLE
  table1 DROP COLUMN column2;",
  },
]
`;

exports[`Scripts > RDBMS - postgres 1`] = `
[
  {
    "formatter": "sql",
    "label": "Drop Database",
    "query": "DROP DATABASE database1",
  },
  {
    "formatter": "sql",
    "label": "Create Database",
    "query": "CREATE DATABASE database1",
  },
  {
    "formatter": "sql",
    "label": "Select All Columns",
    "query": "SELECT
  *
FROM
  table1
LIMIT
  200",
  },
  {
    "formatter": "sql",
    "label": "Select Count",
    "query": "SELECT
  COUNT(*)
FROM
  table1
WHERE
  id = ''
  AND column1 = ''
  AND column2 = ''",
  },
  {
    "formatter": "sql",
    "label": "Select Specific Columns",
    "query": "SELECT
  id,
  column1,
  column2
FROM
  table1
WHERE
  id = ''
  AND column1 = ''
  AND column2 = ''
LIMIT
  200",
  },
  {
    "formatter": "sql",
    "label": "Select Distinct",
    "query": "SELECT
  DISTINCT column1
FROM
  table1
WHERE
  id = ''
  AND column1 = ''
  AND column2 = ''
LIMIT
  200",
  },
  {
    "formatter": "sql",
    "label": "Insert",
    "query": "INSERT INTO
  table1 (id, column1, column2)
VALUES
  ('_id_', '_column1_', '_column2_')",
  },
  {
    "formatter": "sql",
    "label": "Update",
    "query": "UPDATE
  table1
SET
  id = '',
  column1 = '',
  column2 = ''
WHERE
  id = ''
  AND column1 = ''
  AND column2 = ''",
  },
  {
    "formatter": "sql",
    "label": "Delete",
    "query": "DELETE FROM
  table1
WHERE
  id = ''
  AND column1 = ''
  AND column2 = ''",
  },
  {
    "formatter": "sql",
    "label": "Create Table",
    "query": "CREATE TABLE table1 (
  id BIGSERIAL PRIMARY KEY,
  column1 INT NOT NULL,
  column2 VARCHAR(100) NOT NULL
)",
  },
  {
    "formatter": "sql",
    "label": "Drop Table",
    "query": "DROP TABLE table1",
  },
  {
    "formatter": "sql",
    "label": "Add Column",
    "query": "ALTER TABLE
  table1
ADD
  COLUMN newColumn1 CHAR(200)",
  },
  {
    "formatter": "sql",
    "label": "Drop Column",
    "query": "ALTER TABLE
  table1 DROP COLUMN id;
ALTER TABLE
  table1 DROP COLUMN column1;
ALTER TABLE
  table1 DROP COLUMN column2;",
  },
]
`;

exports[`Scripts > RDBMS - sqlite 1`] = `
[
  {
    "formatter": "sql",
    "label": "Drop Database",
    "query": "DROP DATABASE database1",
  },
  {
    "formatter": "sql",
    "label": "Create Database",
    "query": "CREATE DATABASE database1",
  },
  {
    "formatter": "sql",
    "label": "Select All Columns",
    "query": "SELECT
  *
FROM
  table1
LIMIT
  200",
  },
  {
    "formatter": "sql",
    "label": "Select Count",
    "query": "SELECT
  COUNT(*)
FROM
  table1
WHERE
  id = ''
  AND column1 = ''
  AND column2 = ''",
  },
  {
    "formatter": "sql",
    "label": "Select Specific Columns",
    "query": "SELECT
  id,
  column1,
  column2
FROM
  table1
WHERE
  id = ''
  AND column1 = ''
  AND column2 = ''
LIMIT
  200",
  },
  {
    "formatter": "sql",
    "label": "Select Distinct",
    "query": "SELECT
  DISTINCT column1
FROM
  table1
WHERE
  id = ''
  AND column1 = ''
  AND column2 = ''
LIMIT
  200",
  },
  {
    "formatter": "sql",
    "label": "Insert",
    "query": "INSERT INTO
  table1 (id, column1, column2)
VALUES
  ('_id_', '_column1_', '_column2_')",
  },
  {
    "formatter": "sql",
    "label": "Update",
    "query": "UPDATE
  table1
SET
  id = '',
  column1 = '',
  column2 = ''
WHERE
  id = ''
  AND column1 = ''
  AND column2 = ''",
  },
  {
    "formatter": "sql",
    "label": "Delete",
    "query": "DELETE FROM
  table1
WHERE
  id = ''
  AND column1 = ''
  AND column2 = ''",
  },
  {
    "formatter": "sql",
    "label": "Create Table",
    "query": "CREATE TABLE table1 (
  id INTEGER PRIMARY KEY NOT NULL,
  column1 INTEGER NOT NULL,
  column2 VARCHAR(100) NOT NULL
)",
  },
  {
    "formatter": "sql",
    "label": "Drop Table",
    "query": "DROP TABLE table1",
  },
  {
    "formatter": "sql",
    "label": "Add Column",
    "query": "ALTER TABLE
  table1
ADD
  COLUMN newColumn1 TEXT",
  },
  {
    "formatter": "sql",
    "label": "Drop Column",
    "query": "ALTER TABLE
  table1 DROP COLUMN id;
ALTER TABLE
  table1 DROP COLUMN column1;
ALTER TABLE
  table1 DROP COLUMN column2;",
  },
]
`;

exports[`Scripts > aztable 1`] = `
[
  {
    "formatter": "js",
    "label": "Create Table",
    "query": "serviceClient.createTable('somenewtablename')",
  },
  {
    "formatter": "js",
    "label": "Select All Columns",
    "query": "tableClient.listEntities({
  queryOptions: {
    filter: \`\`
  }
})",
  },
  {
    "formatter": "js",
    "label": "Select Specific Columns",
    "query": "tableClient.listEntities({
  queryOptions: {
    filter: \`PartitionKey eq 'some_partition_key'\`,
    select: [\\"id\\", \\"column1\\", \\"column2\\"]
  }
})",
  },
  {
    "formatter": "js",
    "label": "Insert",
    "query": "tableClient.createEntity({
  \\"rowKey\\": \\"some_row_key\\",
  \\"partitionKey\\": \\"some_partition_key\\"
})",
  },
  {
    "formatter": "js",
    "label": "Update",
    "query": "tableClient.updateEntity({
  \\"rowKey\\": \\"some_row_key\\",
  \\"partitionKey\\": \\"some_partition_key\\"
})",
  },
  {
    "formatter": "js",
    "label": "Upsert",
    "query": "tableClient.upsertEntity({
  \\"rowKey\\": \\"some_row_key\\",
  \\"partitionKey\\": \\"some_partition_key\\"
}, 'Replace')",
  },
  {
    "formatter": "js",
    "label": "Delete",
    "query": "tableClient.deleteEntity('some_partition_key', 'some_row_key');",
  },
  {
    "formatter": "js",
    "label": "Create Table",
    "query": "serviceClient.createTable('table1')",
  },
  {
    "formatter": "js",
    "label": "Drop Table",
    "query": "serviceClient.deleteTable('table1')",
  },
]
`;

exports[`Scripts > cassandra 1`] = `
[
  {
    "formatter": "sql",
    "label": "Create Keyspace",
    "query": "CREATE KEYSPACE IF NOT EXISTS database1 WITH replication = { 'class': 'SimpleStrategy',
'replication_factor': 3 };",
  },
  {
    "formatter": "sql",
    "label": "Drop Keyspace",
    "query": "DROP KEYSPACE IF EXISTS database1;",
  },
  {
    "formatter": "sql",
    "label": "Select All Columns",
    "query": "SELECT
  *
FROM
  table1
LIMIT
  200",
  },
  {
    "formatter": "sql",
    "label": "Select Specific Columns",
    "query": "SELECT
  id,
  column1,
  column2
FROM
  table1
WHERE
  id = ''
  AND column1 = ''
  AND column2 = ''
LIMIT
  200",
  },
  {
    "formatter": "sql",
    "label": "Insert",
    "query": "INSERT INTO
  table1 (id, column1, column2)
VALUES
  (123, 123, '_column2_')",
  },
  {
    "formatter": "sql",
    "label": "Update",
    "query": "UPDATE
  table1
SET
  id = 123,
  column1 = 123,
  column2 = '_column2_'
WHERE
  id = 123
  AND column1 = 123
  AND column2 = '_column2_'",
  },
  {
    "formatter": "sql",
    "label": "Delete",
    "query": "DELETE FROM
  table1
WHERE
  id = ''
  AND column1 = ''
  AND column2 = ''",
  },
  {
    "formatter": "sql",
    "label": "Create Table",
    "query": "CREATE TABLE table1 (id INT PRIMARY KEY, column1 INT, column2 VARCHAR(100))",
  },
  {
    "formatter": "sql",
    "label": "Drop Table",
    "query": "DROP TABLE table1",
  },
  {
    "formatter": "sql",
    "label": "Add Column",
    "query": "ALTER TABLE
  table1
ADD
  new_column1 TEXT",
  },
  {
    "formatter": "sql",
    "label": "Drop Column",
    "query": "ALTER TABLE
  table1 DROP id;
ALTER TABLE
  table1 DROP column1;
ALTER TABLE
  table1 DROP column2;",
  },
]
`;

exports[`Scripts > cosmosdb 1`] = `
[
  {
    "formatter": "js",
    "label": "Create Database",
    "query": "client
  .databases
  .create({
    id: 'database1'
  })",
  },
  {
    "formatter": "js",
    "label": "Create Database Container",
    "query": "client
  .database('database1')
  .containers
  .create({
    id: 'some_container_name'
  })",
  },
  {
    "formatter": "js",
    "label": "Drop Database",
    "query": "client
  .database('database1')
  .delete()",
  },
  {
    "formatter": "js",
    "label": "Select All Columns",
    "query": "client
  .database('database1')
  .container('table1')
  .items
  .query({
    query: \`
  SELECT *
  FROM c
  OFFSET 0 LIMIT 200\`,
  })
  .fetchAll()",
  },
  {
    "formatter": "js",
    "label": "Select Specific Columns",
    "query": "client
  .database('database1')
  .container('table1')
  .items
  .query({
    query: \`
  SELECT c.id,
  c.column1,
  c.column2
  FROM c
  WHERE c.id = ''
  AND c.column1 = ''
  AND c.column2 = ''
  OFFSET 0 LIMIT 200\`,
  })
  .fetchAll()",
  },
  {
    "formatter": "js",
    "label": "Select By Id",
    "query": "client
  .database('database1')
  .container('table1')
  .items
  .query({
    query: \`
  SELECT *
  FROM c
  WHERE c.id = '123'\`,
  })
  .fetchAll()",
  },
  {
    "formatter": "js",
    "label": "Read",
    "query": "client
  .database('database1')
  .container('table1')
  .item('some_id', 'some_partition_key')
  .read()",
  },
  {
    "formatter": "js",
    "label": "Insert",
    "query": "client
  .database('database1')
  .container('table1')
  .items
  .create({})",
  },
  {
    "formatter": "js",
    "label": "Update",
    "query": "client
  .database('database1')
  .container('table1')
  .item('some_id', 'some_partition_key')
  .replace({
    \\"id\\": \\"some_id\\"
  })",
  },
  {
    "formatter": "js",
    "label": "Delete",
    "query": "client
  .database('database1')
  .container('table1')
  .item('some_id', 'some_partition_key')
  .delete()",
  },
  {
    "formatter": "sql",
    "label": "Raw Select All Columns SQL",
    "query": "SELECT
  *
FROM
  c",
  },
  {
    "formatter": "js",
    "label": "Create Container",
    "query": "client
  .database('database1')
  .containers
  .create({
    id: 'table1'
  })",
  },
  {
    "formatter": "js",
    "label": "Drop Container",
    "query": "client
  .database('database1')
  .container('table1')
  .delete()",
  },
]
`;

exports[`Scripts > mongodb 1`] = `
[
  {
    "formatter": "js",
    "label": "Create Database",
    "query": "db.createDatabase('database1')",
  },
  {
    "formatter": "js",
    "label": "Drop Database",
    "query": "db.dropDatabase()",
  },
  {
    "formatter": "js",
    "label": "Select All Columns",
    "query": "db.collection('table1')
  .find()
  .limit(200)
  .toArray();",
  },
  {
    "formatter": "js",
    "label": "Select Specific Columns",
    "query": "db.collection('table1')
  .find({
    \\"id\\": 123,
    \\"column1\\": 123,
    \\"column2\\": 123
  })
  .limit(200)
  .toArray();",
  },
  {
    "formatter": "js",
    "label": "Select Distinct",
    "query": "db.collection('table1')
  .distinct(
    'column1', {
      \\"id\\": \\"\\",
      \\"column1\\": \\"\\",
      \\"column2\\": \\"\\"
    }
  )",
  },
  {
    "formatter": "js",
    "label": "Select One Record",
    "query": "db.collection('table1')
  .findOne({
    \\"_id\\": ObjectId(\\"some_id\\")
  });",
  },
  {
    "formatter": "js",
    "label": "Insert",
    "query": "db.collection('table1')
  .insertMany([{
    \\"id\\": 123,
    \\"column1\\": 123,
    \\"column2\\": 123
  }]);",
  },
  {
    "formatter": "js",
    "label": "Update",
    "query": "db.collection('table1')
  .update({
    \\"id\\": 123,
    \\"column1\\": 123,
    \\"column2\\": 123,
    \\"_id\\": ObjectId(\\"some_id\\")
  }, {
    $set: {
      \\"id\\": 123,
      \\"column1\\": 123,
      \\"column2\\": 123
    }
  });",
  },
  {
    "formatter": "js",
    "label": "Delete",
    "query": "db.collection('table1')
  .deleteMany({
    \\"id\\": 123,
    \\"column1\\": 123,
    \\"column2\\": 123
  });",
  },
  {
    "formatter": "js",
    "label": "Create Collection",
    "query": "db.createCollection(\\"table1\\")",
  },
  {
    "formatter": "js",
    "label": "Drop Collection",
    "query": "db.collection('table1')
  .drop()",
  },
]
`;

exports[`Scripts > redis 1`] = `
[
  {
    "formatter": "js",
    "label": "Set Value",
    "query": "db.set(\\"key\\", \\"value123\\")",
  },
  {
    "formatter": "js",
    "label": "Get Value by Key",
    "query": "db.get(\\"key\\")",
  },
  {
    "formatter": "js",
    "label": "Scan for keys",
    "query": "db.keys(\\"*\\")",
  },
  {
    "formatter": "js",
    "label": "Hashset > Set Value",
    "query": "db.hSet(\\"hash_key1\\", \\"field1\\", \\"value1\\")",
  },
  {
    "formatter": "js",
    "label": "Hashset > Get Value By Key",
    "query": "db.hGetAll(\\"hash_key1\\")",
  },
  {
    "formatter": "js",
    "label": "Hashset > Values",
    "query": "db.hVals(\\"hash_key1\\")",
  },
  {
    "formatter": "js",
    "label": "Hashset > Check if key exists",
    "query": "db.hExists(\\"hash_key1\\", \\"field1\\")",
  },
  {
    "formatter": "js",
    "label": "List > Get Items",
    "query": "db.lRange(\\"list_key1\\", 0, -1)",
  },
  {
    "formatter": "js",
    "label": "List > Push item to the front",
    "query": "db.lPush(\\"list_key1\\", \\"value\\")",
  },
  {
    "formatter": "js",
    "label": "List > Push item to the back",
    "query": "db.rPush(\\"list_key1\\", \\"value\\")",
  },
  {
    "formatter": "js",
    "label": "List > Delete item from the front",
    "query": "db.lPop(\\"list_key1\\")",
  },
  {
    "formatter": "js",
    "label": "List > Delete item from the back",
    "query": "db.rPop(\\"list_key1\\")",
  },
  {
    "formatter": "js",
    "label": "Set > Get Items",
    "query": "db.sMembers(\\"set_key1\\")",
  },
  {
    "formatter": "js",
    "label": "Set > Add Item",
    "query": "db.sAdd(\\"set_key1\\", \\"value1\\")",
  },
  {
    "formatter": "js",
    "label": "Set > Is a member of set",
    "query": "db.sIsMember(\\"set_key1\\", \\"value1\\")",
  },
  {
    "formatter": "js",
    "label": "Set > Total Size",
    "query": "db.sCard(\\"set_key1\\")",
  },
  {
    "formatter": "js",
    "label": "Set > Remove last item",
    "query": "db.sPop(\\"set_key1\\")",
  },
  {
    "formatter": "js",
    "label": "Sorted Set > Get Items",
    "query": "db.zRange(\\"sorted_set_key1\\", 0, -1)",
  },
  {
    "formatter": "js",
    "label": "Sorted Set > Add Item",
    "query": "db.zAdd(\\"sorted_set_key1\\", [{
  score: 1,
  value: \\"some_value\\"
}])",
  },
  {
    "formatter": "js",
    "label": "Publish a message",
    "query": "db.publish(\\"pubsub_channel_key1\\", \\"some_message\\")",
  },
]
`;
